--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <h3 class="title">contact info</h3>
 
         <div class="info">
-            <h3> <i class="fas fa-envelope"></i> eduardfrancia08@gmail.com </h3>
+            <h3> <i class="fas fa-envelope"></i> <a href="mailto:eduardfrancia08@gmail.com">Eduard Francia</a><br> </h3>
             <h3> <i class="fas fa-phone"></i> 09163247974 </h3>
             <h3> <i class="fas fa-map-marker-alt"></i> Nagcarlan, Laguna </h3>
         </div>
@@ -192,7 +192,7 @@
 <!-- scroll top button  -->
 
 <a href="#home" class="top">
-    <img src="images/scroll-top-img.png" alt="">
+    <img src="images/edu.jpg" alt="">
 </a>
 
 
